name:                hbmc
version:             0.1
synopsis:            Haskell Bounded Model Checker
-- description:
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén, Koen Claessen
maintainer:          danr@chalmers.se
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    HBMC
    LibHBMC

  hs-source-dirs:      lib
  include-dirs:        lib
  default-language:    Haskell2010
  build-depends:       base >=4,
                       mtl >=2.1,
                       containers >=0.5,
                       transformers >=0.3,
                       tip-haskell-frontend ==0.1,
                       minisat >=0.1

executable hbmcc
  main-is:             TipCompiler.hs
  hs-source-dirs:      compiler
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       tip-lib ==0.1,
                       tip-haskell-frontend ==0.1,
                       geniplate-mirror >=0.6.0.6,

                       transformers >=0.3,
                       mtl >=2.1,
                       containers >=0.5,

                       pretty >=1.1,
                       pretty-show >=1.6

