name:                hbmc
version:             0.1
synopsis:            Haskell Bounded Model Checker
-- description:
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén, Koen Claessen
maintainer:          danr@chalmers.se
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable hbmc
  main-is:             HBMC/Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       tip-lib == 0.1.2,
                       tip-haskell-frontend ==0.1.1,
                       geniplate-mirror >= 0.7.1,

                       cmdargs,
                       process,
                       directory,
                       filepath,
                       temporary,

                       minisat >=0.1,

                       transformers >=0.3,
                       mtl >=2.1,
                       containers >=0.5,

                       pretty >=1.1,
                       pretty-show >=1.6

